--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         <activity android:name=".MapTraversal">
 
         </activity>
+        <activity android:name=".OptionsMenu">
+
+        </activity>
     </application>
 
 </manifest>
